# mapbox-gl-native

./: .gitignore  .travis.yml  Makefile  package.json
cmake/: core-files.cmake  test-files.cmake
include/mbgl/annotation/: annotation.hpp
include/mbgl/map/: camera.hpp
include/mbgl/style/: data_driven_property_value.hpp  layer.hpp  property_value.hpp
include/mbgl/util/: geo.hpp
platform/android/: config.cmake
platform/android/MapboxGLAndroidSDK/: build.gradle
platform/android/MapboxGLAndroidSDKTestApp/: build.gradle
platform/android/scripts/: ndk.sh
platform/darwin/src/: MGLFeature.mm  MGLFeature_Private.h  MGLGeoJSONSource.h  MGLGeoJSONSource.mm  MGLMapCamera.mm  MGLPointCollection.mm  MGLPolygon.mm  MGLPolyline.mm  MGLRasterSource.mm  MGLStyle.mm  MGLStyle_Private.h  MGLTileSet.h  MGLVectorSource.mm
platform/darwin/test/: MGLGeoJSONSourceTests.mm  MGLLayerTests.m  MGLSourceTests.m
platform/ios/: CHANGELOG.md  config.cmake
platform/ios/app/: MBXViewController.m
platform/ios/ios.xcodeproj/: project.pbxproj
platform/ios/src/: MGLMapView.mm
platform/ios/test/: MGLSourceTests.m
platform/ios/uitest/: MapViewTests.m
platform/linux/: config.cmake
platform/macos/: CHANGELOG.md  config.cmake
platform/macos/app/: MapDocument.m
platform/macos/macos.xcodeproj/: project.pbxproj
platform/macos/src/: MGLMapView.mm
platform/qt/: config.cmake  qt.cmake
platform/qt/src/: qmapboxgl.cpp  qmapboxgl_p.hpp  thread.cpp
platform/qt/standalone/: CMakeLists.txt  standalone.cmake
scripts/: build-shaders.js  generate-style-code.js
src/mbgl/gl/: attribute.cpp  attribute.hpp  context.cpp  normalization.hpp  segment.hpp  uniform.hpp
src/mbgl/layout/: symbol_feature.hpp  symbol_layout.cpp  symbol_layout.hpp
src/mbgl/map/: map.cpp
src/mbgl/programs/: attributes.hpp  line_program.cpp  line_program.hpp  paint_attribute_data.hpp  program.hpp  raster_program.hpp  symbol_program.cpp
src/mbgl/renderer/: circle_bucket.cpp  circle_bucket.hpp  debug_bucket.cpp  fill_bucket.cpp  fill_bucket.hpp  line_bucket.cpp  line_bucket.hpp  painter.cpp  painter_background.cpp  painter_circle.cpp  painter_clipping.cpp  painter_debug.cpp  (+5 more)
test/gl/: bucket.test.cpp
test/map/: map.test.cpp
test/style/: style_layer.test.cpp
test/text/: quads.test.cpp
(+63 files in other folders)
