cmake_minimum_required(VERSION 3.2)
project(qmapboxgl LANGUAGES CXX C)

set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/../../..)

include(${CMAKE_SOURCE_DIR}/cmake/core-files.cmake)
include(${CMAKE_SOURCE_DIR}/platform/qt/qt.cmake)
include(${CMAKE_SOURCE_DIR}/platform/qt/standalone/standalone.cmake)

add_library(mbgl-core STATIC
    ${MBGL_CORE_FILES}
)

add_dep(geometry.hpp      v0.8.0  mapbox/geometry.hpp)
add_dep(variant           v1.1.1  mapbox/variant)
add_dep(unique_resource   cba309  okdshin/unique_resource)
add_dep(rapidjson         v1.0.2  miloyip/rapidjson)
add_dep(geojson-vt-cpp    v6.1.3  mapbox/geojson-vt-cpp)
add_dep(supercluster.hpp  v0.2.0  mapbox/supercluster.hpp)
add_dep(kdbush.hpp        v0.1.1  mourner/kdbush.hpp)
add_dep(earcut            662398  mapbox/earcut.hpp) # v0.11 + header fix
add_dep(protozero         v1.4.2  mapbox/protozero)
add_dep(geojson-cpp       v0.1.4  mapbox/geojson-cpp)
add_dep(mapbox-gl-shaders de2ab0  mapbox/mapbox-gl-shaders)
add_dep(libboost          v1.60.0 tmpsantos/mapbox-gl-native-boost)

if (CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    add_dep(optional      5f08e2e tmpsantos/Optional) # polyfill for Windows

    add_definitions(
        -D_USE_MATH_DEFINES
        -DNOGDI
        -DNOMINMAX
    )
endif()

add_shader(circle)
add_shader(collisionbox)
add_shader(debug)
add_shader(fill)
add_shader(icon)
add_shader(line)
add_shader(linepattern)
add_shader(linesdfpattern)
add_shader(outline)
add_shader(outlinepattern)
add_shader(pattern)
add_shader(raster)
add_shader(sdf)

target_link_libraries(mbgl-core
    ${MBGL_QT_LIBRARIES}
)

target_sources(mbgl-core
    ${MBGL_QT_FILES}
    PRIVATE ${CMAKE_SOURCE_DIR}/platform/qt/standalone/geojson-hack.cpp
)

add_custom_target(mbgl-headers DEPENDS
    ${MBGL_SHADER_FILES}
    ${CMAKE_SOURCE_DIR}/include/mbgl/util/version.hpp
)

add_dependencies(mbgl-core
    mbgl-headers
)

include_directories(
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/platform/default
    ${CMAKE_SOURCE_DIR}/platform/qt/include
    ${CMAKE_SOURCE_DIR}/src
)

add_definitions(
    -DQT_IMAGE_DECODERS
)
